# Dobble-master-race

./: .gitignore  README.md  autoeval.py  better-color-histogram.ipynb  color-histogram-2.ipynb  color-histogram.ipynb  early-fusion.ipynb  frequence.ipynb  process.py  pyproject.toml  rapport.ipynb  shape-descriptor.ipynb  shape-histogram-descriptor.ipynb  toolkit.py
dobble_master_race/: img_utils.py  toolkit.py  train_models.py  transformers.py
dobble_master_race/models_save/: kmeans_save.sav  scaler_save.sav
