[tool.poetry]
name = "dobble-master-race"
version = "0.1.0"
description = "Dobble symbols classifier"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "~3.10"
click = "^8.1.2"
numpy = "^1.22.3"
matplotlib = "^3.5.1"
scikit-image = "^0.19.2"
scipy = "^1.8.0"
scikit-learn = "^1.0.2"
opencv-python = "^4.5.5"

[tool.poetry.dev-dependencies]
tqdm = "^4.64.0"
jupyter = "^1.0.0"
pandas = "^1.4.2"
seaborn = "^0.11.2"
ipympl = "^0.9.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
